WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
13379
REGRESSION: Cannot add an option to a selected popup
https://bugs.webkit.org/show_bug.cgi?id=13379
Summary
REGRESSION: Cannot add an option to a selected popup
Alexey Proskuryakov
Reported
2007-04-17 22:23:38 PDT
Steps to reproduce: 1) Open
http://srufaculty.sru.edu/david.dailey/javascript/stringtimer.html
2) Click on the empty popup after "array_join" button 3) Click on the "array_join" button Result: the popup changes its width, but remains empty. clicking on it for the first time doesn't make popup menu appear, but at a second attempt, it appears. For this particular page, this is a regression, because it is not possible to focus this pop-up in shipping Safari (it's disabled). I'm not sure how much of the current behavior is due to new issues in WebKit, though. Works fine in Firefox. The popup button is focusable there, like in ToT WebKit.
Attachments
Let the client know that the popup closed, if it never opened.
(2.65 KB, patch)
2007-04-28 11:47 PDT
,
mitz
adele
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darin Adler
Comment 1
2007-04-23 08:39:12 PDT
<
rdar://problem/5153024
>
mitz
Comment 2
2007-04-28 11:47:59 PDT
Created
attachment 14246
[details]
Let the client know that the popup closed, if it never opened. Includes a manual test.
Darin Adler
Comment 3
2007-04-28 18:51:20 PDT
Sending OpenSource/WebCore/ChangeLog Adding OpenSource/WebCore/manual-tests/update-empty-popup.html Sending OpenSource/WebCore/platform/mac/PopupMenuMac.mm Transmitting file data ... Committed revision 21171.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug