        Reviewed by Adele.

- fix http://bugs.webkit.org/show_bug.cgi?id=13379
          REGRESSION: Cannot add an option to a selected popup

        * manual-tests/update-empty-popup.html: Added.
        * platform/mac/PopupMenuMac.mm:
        (WebCore::PopupMenu::show): Added a call to the client's hidePopup()
        callback before returning in the case that the menu is empty. Otherwise
        the client thinks that the menu stayed open.



Canonical link: https://commits.webkit.org/17683@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@21171 268f45cc-cd09-0410-ab3c-d52691b4dbfc